--- a/client/src/components/Main.css
+++ b/client/src/components/Main.css
@@ -29,6 +29,14 @@
   background-color: #177e89;
 }
 
+.b-new-player {
+  color: white;
+  border: none;
+  min-height: 25px;
+  border-radius: 5px;
+  background-color: #6c4398;
+}
+
 .text-button {
   background-color: transparent;
   border: none;
