removed media query

--- a/client/src/components/Main.css
+++ b/client/src/components/Main.css
@@ -16,11 +16,11 @@
 .player-input {
 }
 
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
   .landingicon {
     max-width: 300px;
   }
-}
+} */
 
 .min-input {
   text-align: center;
