--- a/client/src/components/Main.css
+++ b/client/src/components/Main.css
@@ -1,7 +1,9 @@
 .title {
   font-size: 50px;
+
   color: white;
-  font-weight: 400;
+  font-weight: lighter;
+  font-weight: 500;
 }
 
 .top {
@@ -29,6 +31,12 @@
   .timer {
     font-size: 20em;
   }
+}
+
+.slogan {
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 .timer {
